# Florensia-PAK-Editor

./: .gitignore  Florensia PAK Editor.spec  README.md  main.py  pyproject.toml
Florensia PAK Editor/: Florensia PAK Editor.sln
Florensia PAK Editor/Florensia PAK Editor/: Florensia PAK Editor.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Pak.cs  Program.cs  tga-decoder.cs
Florensia PAK Editor/Florensia PAK Editor/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
pak_editor/: __init__.py  constants.py  utils.py
pak_editor/gui/: file_list_widget.py  main_window.py  pak_file_info_widget.py  preview_widget.py
pak_editor/parsers/: bin_file.py  dat_file.py  pak_file.py
